@startuml
scale 0.5
interface ItemsModel {
    +getItems(): Map<String, Integer>
    +getItemDescription(itemName: String): String
    +getItemValor(itemName: String): double
    +getItemType(itemName: String): ItemType
    +getItemBoostedAttributeName(itemName: String): String
    +useItem(item: String): boolean
}

class ItemsModelImpl {
    -model: GameModel
    +ItemsModelImpl(model: GameModel)
}

ItemsModel --> Item
ItemsModelImpl --> GameModel
ItemsModelImpl --> ItemsModel
@enduml